--- a/Home.html
+++ b/Home.html
@@ -4,28 +4,104 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home Page</title>
+    <style>
+        body {
+            background-image: url('https://images.hdqwalls.com/download/mountain-range-blue-5k-yf-3840x2160.jpg');
+            background-size: cover;
+            background-repeat: no-repeat;
+            background-position: center;
+            height: 100vh;
+            margin: 0;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            color: white;
+            font-family: Arial, sans-serif;
+            text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.7);
+        }
+        nav {
+            margin-top: 20px;
+        }
+        input, button {
+            margin: 5px;
+            padding: 8px;
+        }
+        #results {
+            margin-top: 20px;
+            display: flex;
+            flex-wrap: wrap;
+            justify-content: center;
+            gap: 20px;
+        }
+        .card {
+            background: rgba(0, 0, 0, 0.7);
+            padding: 15px;
+            border-radius: 10px;
+            width: 250px;
+            text-align: center;
+        }
+        .card img {
+            width: 100%;
+            border-radius: 10px;
+        }
+    </style>
 </head>
-<body style="
-    background-image: url('https://images.hdqwalls.com/download/mountain-range-blue-5k-yf-3840x2160.jpg'); 
-    background-size: cover; 
-    background-repeat: no-repeat; 
-    background-position: center; 
-    height: 100vh; 
-    margin: 0; 
-    display: flex; 
-    justify-content: center; 
-    align-items: center; 
-    color: white; 
-    font-family: Arial, sans-serif; 
-    text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.7);
-">
- <nav>
-    <a href="Home.html">Home</a>
-    <a href="About.html">About us</a>
-    <a href="Contact.html">Contact us</a>
-    <input type="text" placeholder="Search for destinations">
-    <button id="reset">Reset</button>
-</nav>
+<body>
+    <nav>
+        <a href="Home.html">Home</a>
+        <a href="About.html">About us</a>
+        <a href="Contact.html">Contact us</a>
+        <input type="text" id="search" placeholder="Search for destinations">
+        <button id="searchBtn">Search</button>
+        <button id="reset">Reset</button>
+    </nav>
     <h1>EXPLORE DREAM DESTINATION</h1>
+    <div id="results"></div>
+
+    <script>
+        let data;
+
+        async function fetchData() {
+            try {
+                const response = await fetch('travel_recommendation_api.json'); // Ensure 'data.json' is in the same directory
+                data = await response.json();
+            } catch (error) {
+                console.error("Error loading data.json", error);
+            }
+        }
+
+        document.getElementById('searchBtn').addEventListener('click', async () => {
+            if (!data) await fetchData();
+            const query = document.getElementById('search').value.toLowerCase();
+            const resultsDiv = document.getElementById('results');
+            resultsDiv.innerHTML = '';
+            let results = [];
+            
+            if (query.includes('beach')) results = data.beaches;
+            else if (query.includes('temple')) results = data.temples;
+            else {
+                const country = data.countries.find(c => c.name.toLowerCase().includes(query));
+                if (country) results = country.cities;
+            }
+            
+            results.forEach(place => {
+                const card = document.createElement('div');
+                card.className = 'card';
+                card.innerHTML = `
+                    <img src="${place.imageUrl}" alt="${place.name}">
+                    <h3>${place.name}</h3>
+                    <p>${place.description}</p>
+                `;
+                resultsDiv.appendChild(card);
+            });
+        });
+
+        document.getElementById('reset').addEventListener('click', () => {
+            document.getElementById('search').value = '';
+            document.getElementById('results').innerHTML = '';
+        });
+
+        fetchData(); // Load data initially
+    </script>
 </body>
 </html>
